fix text align adaptive menu

--- a/src/shared/ui/Header/components/AdaptiveNavigate/AdaptiveNavigate.module.scss
+++ b/src/shared/ui/Header/components/AdaptiveNavigate/AdaptiveNavigate.module.scss
@@ -62,6 +62,7 @@
       border: none;
 
       font-size: clamp(16px, 4vw, 34px);
+      text-align: left;
       color: var(--text-color);
 
       svg {
